--- a/package.json
+++ b/package.json
@@ -1,36 +1,50 @@
 {
-  "name": "expressjs-sample-app",
+  "name": "jonlem-js-test-site",
   "version": "1.0.0",
-  "description": "A simple Express.js web application for testing and learning",
+  "description": "A simple test site for myrproducciones",
   "private": true,
-  "main": "src/index.js",
   "scripts": {
-    "start": "cd ./src && node app.js 8000"
+    "start": "cd ./app && node index.js",
+    "serve": "cd ./app && node index.js 3000",
+    "serve:logs": "cd ./app && node index.js 3000 --request-logs",
+    "build": "cross-env NODE_ENV=development webpack"
+  },
+  "homepage": "http://myrproducciones.herokuapp.com",
+  "bugs": {
+    "url": "https://github.com/JonLemOfficial/jonlemofficial-test-site/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JonLemOfficial/expressjs-sample-app.git"
+    "url": "git+https://github.com/JonLemOfficial/jonlemofficial-test-site.git"
   },
   "keywords": [
+    "myrproducciones",
+    "jonlem-app",
+    "jonlem-webapp",
     "express-app",
-    "express-application",
-    "express-nodejs",
-    "web-app",
-    "sample-web-app"
+    "test-site",
+    "test-website"
   ],
   "author": {
     "name": "Jonathan \"JonLem\" Lemos",
+    "mail": "jonlemofficial@hotmail.com",
     "github": "https://github.com/JonLemOfficial",
     "twitter": "https://twitter.com/JonLemOfficial"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/JonLemOfficial/expressjs-sample-app/issues"
-  },
-  "homepage": "https://github.com/JonLemOfficial/expressjs-sample-app#readme",
   "dependencies": {
+    "angular": "^1.8.0",
+    "colors": "^1.4.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "require-directory": "^2.1.1"
+    "require-directory": "^2.1.1",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
   }
 }
