--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "jonlem-js-test-site",
   "version": "1.1.0",
-  "description": "A simple test site for myrproducciones",
+  "description": "A simple test site for expressjs app",
   "private": true,
   "scripts": {
     "start": "cd ./app && node index.js",
-    "serve": "cd ./app && node index.js 3000",
-    "serve:logs": "cd ./app && node index.js 3000 --request-logs",
-    "build": "cross-env NODE_ENV=development webpack"
+    "serve:logs": "cd ./app && node index.js --request-logs"
   },
-  "homepage": "http://myrproducciones.herokuapp.com",
+  "homepage": "https://expressjs-sample-app.herokuapp.com/",
   "bugs": {
-    "url": "https://github.com/JonLemOfficial/jonlemofficial-test-site/issues"
+    "url": "https://github.com/JonLemOfficial/expressjs-sample-app/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JonLemOfficial/jonlemofficial-test-site.git"
+    "url": "git+https://github.com/JonLemOfficial/expressjs-sample-app.git"
   },
   "keywords": [
-    "myrproducciones",
     "jonlem-app",
     "jonlem-webapp",
+    "expressjs-app",
     "express-app",
     "test-site",
     "test-website"
@@ -33,18 +31,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.8.0",
-    "colors": "^1.4.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "require-directory": "^2.1.1",
-    "sass-loader": "^8.0.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "require-directory": "^2.1.1"
   }
 }
